# VoiceBridge-AI

./: .env.example  .gitignore  DEPLOYMENT_STATUS.md  README.md  deploy_cosy.sh  docker-compose.yml  go.work.sum  package.json  pnpm-lock.yaml  test_asr_llm.py  test_demo_data.py  test_fixes.py  test_full_pipeline.py
ai_agent/: .dockerignore  Dockerfile  generate_configs.py  main.py  pyproject.toml  requirements.txt  run_dataset_demo.py  test_full_pipeline.py  test_tts_internal.py
ai_agent/api/: __init__.py  router.py
ai_agent/core/: asr_whisper.py  config.py  database.py  llm_reasoning.py  storage.py  tts_cosy.py  tts_edge.py
ai_agent/data/: grand_round_dataset.json
ai_agent/data/demo/: .gitkeep  Anita.json  JAMES.json  ROSE.json
ai_agent/pretrained_models/: README.md
ai_agent/schemas/: task.py
ai_agent/services/: pipeline.py
backend/: Dockerfile  go.mod  go.sum
data_pipeline/: __init__.py  main_pipeline.py  requirements.txt
data_pipeline/loaders/: __init__.py  base.py  demo_loader.py
data_pipeline/output/: .gitkeep
data_pipeline/parsers/: __init__.py  cha_parser.py
data_pipeline/processors/: __init__.py  audio_cleaner.py  converter.py
deploy/nginx/: nginx.conf
docs/: COMMANDS.md  TTS_REFACTOR_REPORT.md
frontend/: .prettierignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
nginx/: default.conf
scripts/: check_model_status.sh  check_proxy.sh  check_tts_status.sh  clean_stuck_tasks.sh  quick_deploy.sh  rebuild_tts.sh
tests/scripts/: quick_test.py  (+7 more)
(+45 files in other folders)
