[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "addict>=2.4.0",
    "conformer==0.3.2",
    "cython>=3.2.3",
    "datasets<3.0.0",
    "diffusers>=0.36.0",
    "edge-tts>=7.2.7",
    "einops>=0.8.1",
    "fastapi>=0.128.0",
    "gdown>=5.2.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core==1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "hyperpyyaml==1.2.2",
    "inflect==7.3.1",
    "librosa>=0.11.0",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "minio>=7.2.20",
    "modelscope>=1.33.0",
    "omegaconf==2.3.0",
    "onnxruntime>=1.23.0",
    "openai-whisper>=20250625",
    "oss2>=2.19.1",
    "phonemizer>=3.3.0",
    "pillow>=12.0.0",
    "protobuf==4.25",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyworld==0.3.4",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "rootutils>=1.0.7",
    "scipy>=1.16.3",
    "simplejson>=3.20.2",
    "sortedcontainers>=2.4.0",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.45",
    "tensorboard>=2.20.0",
    "timm>=1.0.22",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
    "wandb>=0.23.1",
    "wetext==0.0.4",
    "wget>=3.2",
    "yapf>=0.43.0",
]
